- Fix for ZOD error in Claude Desktop - According to the JSON-RPC 2.0 specification, the behavior of the id field in the response is as follows. If the id in the request is not provided (i.e., no id field at all), the request is considered a notification. Notifications do not get a response at all, so there should be no response (not even an error). If the id is present but is an empty string, then the response id must be an empty string.
- Load data from sql scripts

- In tool description, ask the LLM not to use comments